# mail-assistant

./: README.md  add-reminders.py  expense-tracker.py  mail-analyse.py  mail-analyse_test.py  mail-archiver.py  mail-headers-analyse.py  mail_analysis.py  models.py  prompts.yaml  pyproject.toml  pytest.ini
tests/: conftest.py  mail-analyse_test.py  models_test.py
tests/data/: email1.yaml  email2.yaml  email3.yaml  email4.yaml  email5.yaml
